# statesync

./: .gitignore  FileEntry.c  FileEntry.h  Makefile  README  add.c  add.h  autogen.sh  configure.ac  file.c  file.h  main.c  receive.c  send.c  status.c  status.h  types.h  util.c  util.h
docs/: add-activity.uxf
src/: FileEntry.c  Makefile.am  add.c  add.h  main.c  receive.c  receive.h  send.c  send.h  status.h  types.h  util.h
tests/: dmesg.txt  test2.txt  test3.txt
tests/subfolder/: mount.txt
